--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import "reset.css";
 body {
-  background-color: grey;
+  background-color: skyblue;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
